# flask-blog

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  app.py  config.py  docker-compose.yml  init_db.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
migrations/versions/: 0001_initial_blog_schema.py
models/: __init__.py  category.py  comment.py  like.py  post.py  tag.py  user.py
routes/: admin.py  auth.py  comments.py  posts.py
static/css/: admin.css  style.css
templates/: 404.html  500.html  change_password.html  dashboard.html  forgot_password.html  index.html  login.html  post_detail.html  register.html  reset_password.html  user_profile.html  write_post.html
templates/admin/: categories.html  comments.html  dashboard.html  layout.html  pagination.html  posts.html  users.html
tests/: conftest.py  test_auth.py  test_comments.py  test_likes.py  test_posts.py
utils/: __init__.py
