[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "flask-blog"
version = "1.0.0"
description = "A full-featured Flask + MySQL blog system with RESTful API, admin dashboard, and Docker deployment"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "ZHU123-Develop", email = "admin@example.com"},
]
keywords = ["flask", "blog", "mysql", "python"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Flask",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
]

dependencies = [
    "Flask>=3.0.0",
    "Flask-SQLAlchemy>=3.1.1",
    "PyMySQL>=1.1.0",
    "Werkzeug>=3.0.1",
    "Flask-JWT-Extended>=4.6.0",
    "Markdown>=3.5.1",
    "feedgen>=1.0.0",
    "Flask-Migrate>=4.0.5",
    "flasgger>=0.9.7.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-flask>=1.3.0",
]

[tool.setuptools.packages.find]
include = ["models*", "routes*", "utils*"]
